integrates\feat(build): #3875.28 deploy playstore makes
- Migrate job that deploys the app to the PlayStore to makes.
- Create tools folder for the two Ruby gems used by the deployment.
- Delete old jobs and provisioners.


Former-commit-id: 2205d7b3aa894d5306401cffe8a4c38b57cc9de5